Additional Scoring Groups can be available only for some groups
Switch between additional scores in analytics by (shift+)tab and up/down arrows
Additional checking for scoring groups on course loading
Fix bug with unique constraint for AdditionalScore

--- a/src/uLearn.Web/Content/ulearn.css
+++ b/src/uLearn.Web/Content/ulearn.css
@@ -1279,7 +1279,9 @@ table.analytics__user-answers {
 .analytics__dashboard .additional-score-input {
 	display: none;
 	height: 25px;
+	width: 45px;
 	font-size: 12px;
+	text-align: right;
 }
 
 @media (max-width:768px) {
